@@ -26,13 +26,10 @@
 #include "dbread.h"
 #include "omdebug.h"
 
-DBDocument::DBDocument(const DBDatabase * database_,
-		       om_docid did_,
+DBDocument::DBDocument(const DBDatabase * database_, om_docid did_,
 		       int heavy_duty_)
-        : database(database_),
-	  did(did_),
-	  rec(NULL),
-	  heavy_duty(heavy_duty_)
+        : Document(database_), database(database_),
+	  did(did_), rec(NULL), heavy_duty(heavy_duty_)
 {
 }
 
